raffia/tests/error/less/qualified-rule/invalid-guard-position.snap
---
source: raffia/tests/error.rs
---
error: expect token `;`, but found `<ident>`
  ┌─ invalid-guard-position.less:1:4
  │
1 │ .a when (@ie8 = true),
  │    ^^^^


